# cmptab

./: CMakeLists.txt  README.md
src/: bitstring.c  bitstring.h  cmptab.c  extractg.c  grammar.h  nextitem.c  options.h  printgram.c  symbol.h  tabbinio.c  tabbinio.h  table.c  table.h  tableio.c  tableio.h  type.h  utility.c  utility.h
test/: expected_result  test_input
